[tool.poetry]
name = "car-detection-api"
version = "0.1.0"
description = "A RESTful API to detect cars, count red cars, and describe images."
authors = ["Ghazaros"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
numpy = "^1.24.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
opencv-python-headless = "^4.7.0" 
ultralytics = "^8.3.0"
transformers = "^4.39.3"
accelerate = "^1.6.0"
pillow = "^11.1.0"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
